--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "tsx": "^3.12.3"
   },
   "dependencies": {
+    "@prisma/client": "4.10.1",
     "@types/express": "^4.17.17",
     "express": "^4.18.2"
   }
